<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mealCheck.MealCheckActivity">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/breakfast"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/_08_00"
        android:textSize="40sp"
        android:layout_below="@id/tv_name"/>

    <ImageButton
        android:id="@+id/fab_eat"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/circular_button"
        android:padding="6dp"
        android:src="@drawable/ic_baseline_check_24"
        android:textColor="@android:color/white"
        android:contentDescription="@string/add_button" />

    <ImageButton
        android:id="@+id/fab_skip"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/circular_button"
        android:padding="6dp"
        android:src="@drawable/ic_baseline_close_24"
        android:textColor="@android:color/white"
        android:contentDescription="@string/skipped" />

</RelativeLayout>