<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_header_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/header_home_1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_header_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_home_2"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_query"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_1"
        app:layout_constraintVertical_bias="0.046" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/blue_transparent"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_2">
        <TextView
            android:textSize="12sp"
            android:textColor="@color/gray_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_search" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/ed_query"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:autofillHints="@string/autofill_query"
        android:background="@drawable/search_bar_bg"
        android:gravity="top|start"
        android:hint="@string/hint_search"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="8"
        android:maxLines="8"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cv_help"
        app:layout_constraintVertical_bias="0.134"
        android:padding="10dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:minHeight="48dp"
        android:text="@string/calculate_foods"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_query"
        app:layout_constraintVertical_bias="0.037" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/illustration_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>